Connected Stripe account payment configuration added. #TOB-281
