# src/main/java/biz/turnonline/ecosystem/steward/model/Account.java
@@ -11,8 +11,8 @@
  */
 /*
  * This code was generated by https://github.com/google/apis-client-generator/
- * (build: 2018-10-08 17:45:39 UTC)
- * on 2020-10-15 at 04:53:02 UTC
+ * (build: 1969-12-31 23:59:59 UTC)
+ * on 2021-01-08 at 14:43:10 UTC
  * Modify at your own risk.
  */
 
@@ -123,6 +123,12 @@ public final class Account
      */
     @com.google.api.client.util.Key
     private com.google.api.client.util.DateTime modificationDate;
+
+    /**
+     * The value may be {@code null}.
+     */
+    @com.google.api.client.util.Key
+    private PaymentConfig payment;
 
     /**
      * The value may be {@code null}.
@@ -429,6 +435,23 @@ public final class Account
     public Account setModificationDate( com.google.api.client.util.DateTime modificationDate )
     {
         this.modificationDate = modificationDate;
+        return this;
+    }
+
+    /**
+     * @return value or {@code null} for none
+     */
+    public PaymentConfig getPayment()
+    {
+        return payment;
+    }
+
+    /**
+     * @param payment payment or {@code null} for none
+     */
+    public Account setPayment( PaymentConfig payment )
+    {
+        this.payment = payment;
         return this;
     }
 
