# src/main/java/biz/turnonline/ecosystem/steward/model/PaymentConfig.java
@@ -19,7 +19,7 @@
 package biz.turnonline.ecosystem.steward.model;
 
 /**
- * Model definition for LegalFormCollection.
+ * Model definition for PaymentConfig.
  *
  * <p> This is the Java data model class that specifies how to parse/serialize into the JSON that is
  * transmitted over HTTP when working with the TurnOnline.biz Account Steward. For a detailed
@@ -30,50 +30,43 @@ package biz.turnonline.ecosystem.steward.model;
  * @author Google, Inc.
  */
 @SuppressWarnings( "javadoc" )
-public final class LegalFormCollection
+public final class PaymentConfig
         extends com.google.api.client.json.GenericJson
 {
-
-    static
-    {
-        // hack to force ProGuard to consider LegalForm used, since otherwise it would be stripped out
-        // see https://github.com/google/google-api-java-client/issues/543
-        com.google.api.client.util.Data.nullOf( LegalForm.class );
-    }
 
     /**
      * The value may be {@code null}.
      */
     @com.google.api.client.util.Key
-    private java.util.List<LegalForm> items;
+    private Stripe stripe;
 
     /**
      * @return value or {@code null} for none
      */
-    public java.util.List<LegalForm> getItems()
+    public Stripe getStripe()
     {
-        return items;
+        return stripe;
     }
 
     /**
-     * @param items items or {@code null} for none
+     * @param stripe stripe or {@code null} for none
      */
-    public LegalFormCollection setItems( java.util.List<LegalForm> items )
+    public PaymentConfig setStripe( Stripe stripe )
     {
-        this.items = items;
+        this.stripe = stripe;
         return this;
     }
 
     @Override
-    public LegalFormCollection set( String fieldName, Object value )
+    public PaymentConfig set( String fieldName, Object value )
     {
-        return ( LegalFormCollection ) super.set( fieldName, value );
+        return ( PaymentConfig ) super.set( fieldName, value );
     }
 
     @Override
-    public LegalFormCollection clone()
+    public PaymentConfig clone()
     {
-        return ( LegalFormCollection ) super.clone();
+        return ( PaymentConfig ) super.clone();
     }
 
 }
