# src/main/resources/swagger2.json
@@ -2049,6 +2049,10 @@
                     "format": "date-time",
                     "description": "The date and time of the last modification of entity values. Populated by the service."
                 },
+                "payment": {
+                    "description": "Payment processors configuration",
+                    "$ref": "#/definitions/PaymentConfig"
+                },
                 "personalAddress": {
                     "description": "The personal account address details.",
                     "$ref": "#/definitions/AccountPersonalAddress"
@@ -2881,6 +2885,25 @@
                 }
             },
             "description": "If security code is missing in the subscription request, a verification link (incl. security code) will be sent to the contact email to validate newsletter subscription. Until validated the email will be added as a new contact however unsubscribed from the newsletter. Generated security code will be kept and associated with contact email.\n\nIf modification date is being provided the subscription request will be accepted only if this modification date is after the time kept by the service (last wins). Useful if requests are processed asynchronously. If not provided, the subscription requests will be processed in order as they comes."
+        },
+        "PaymentConfig": {
+            "type": "object",
+            "description": "Payment processors configuration",
+            "properties": {
+                "stripe": {
+                    "description": "Stripe payment processor configuration",
+                    "$ref": "#/definitions/Stripe"
+                }
+            }
+        },
+        "Stripe": {
+            "type": "object",
+            "properties": {
+                "account": {
+                    "type": "string",
+                    "description": "The Stripe (connected) account as a beneficiary account for incoming payments via Stripe payment processor."
+                }
+            }
         },
         "Uri": {
             "type": "object",
